--- a/src/styles/CharacterList.scss
+++ b/src/styles/CharacterList.scss
@@ -1,44 +1,35 @@
-.div-container-main {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding-left: 15px;
-    padding-right: 15px;
+.ul-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-items: center;
+  padding-left: 0;
 
-    .ul-container {
+  .li-info {
+    width: 255px;
+    list-style: none;
+
+    .image {
+      width: 100%;
+      height: 300px;
+    }
+
+    .info {
+      background: rgb(191, 151, 66);
+      bottom: 44px;
+      height: 60px;
+      position: relative;
+      color: rgb(247, 247, 247);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
       padding-left: 15px;
-      padding-right: 15px;
-  
-      .li-info {
-        width: 255px;
-        list-style: none;
-  
-        .image {
-          width: 100%;
-          height: 300px;
-          margin: 25px;
-          margin-left: 0;
-          margin-bottom: 0;
-        }
-  
-        .info {
-          background: rgb(191, 151, 66);
-          bottom: 44px;
-          height: 60px;
-          position: relative;
-          color: rgb(247, 247, 247);
-          display: flex;
-          flex-direction: column;
-          justify-content: space-around;
-          padding-left: 15px;
-  
-            h3,p {
-              margin: 0;
-              font-size: 20px;
-          }
-        }
+
+      h3,
+      p {
+        margin: 0;
+        font-size: 25px;
+        text-transform: capitalize;
       }
     }
   }
-  
+}
