--- a/src/styles/CharacterList.scss
+++ b/src/styles/CharacterList.scss
@@ -8,6 +8,10 @@
     width: 255px;
     list-style: none;
 
+    .links{
+      text-decoration: none;
+    }
+
     .image {
       width: 100%;
       height: 300px;
