--- a/src/styles/CharacterList.scss
+++ b/src/styles/CharacterList.scss
@@ -4,6 +4,15 @@
   justify-items: center;
   padding-left: 0;
 
+
+@media (max-width: 798px ) and (min-width: 488px){
+    grid-template-columns: 1fr 1fr;
+}
+
+@media (max-width: 487px){
+    grid-template-columns: 1fr;
+}
+
   .li-info {
     width: 255px;
     list-style: none;
@@ -37,3 +46,4 @@
     }
   }
 }
+
