--- a/src/styles/CharacterDetail.scss
+++ b/src/styles/CharacterDetail.scss
@@ -38,10 +38,11 @@
 
 .return{
     display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
     text-decoration: none;
-    font-size: 23px;
-    padding-left: 46px;
-    padding-top: 10px;
+    font-size: 26px;
     color: rgb(247, 247, 247);
 }
 
